# Biome

./: .gitignore
meson-uninstalled/: biome-0.1-uninstalled.pc
src/: meson.build
src/lib/: Biome.vala  FakeRoot.vala  meson.build
src/lib/Elements/: BuildInfo.vala  DependencyResolver.vala  Element.vala  ElementIdentifier.vala  ElementRepository.vala  FilesystemRepository.vala  PatchInfo.vala  Types.vala
src/lib/Environment/: Environment.vala  EnvironmentBuilder.vala  EnvironmentDescription.vala
src/lib/Filesystem/: Mount.vala  MountDescription.vala
src/lib/Standard/: Paths.vala
src/tools/: meson.build
src/tools/biome-cook/: Cook.vala  HybridRepository.vala  meson.build
src/tools/biome-exec/: exec.vala  meson.build
src/tools/shittest/: Shittest.vala  meson.build
